infrastructure/configs/monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: cattle-monitoring-system
spec:
  rules:
  - host: grafana.edge.youngandhungry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-monitoring-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.edge.youngandhungry.org
    secretName: grafana-tls
